# New-Inspire-icons

./: CMakeLists.txt  README.md  generate-24px-versions.py  initial-icon-guidelines-proposal
icons/: CMakeLists.txt  icon-theme.cache  index.theme
icons-dark/: CMakeLists.txt  index.theme  light2Dark
